--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <article class="card-articles"></article>
                 <h3>Monto Total</h3>
                 <div id="detalles"></div>
-                <label id="generarFactura" onclick="generarFacturaPDF()" class="label-button">Descgar factura</label>
+                <label id="generarFactura" onclick="generarFacturaPDF()" class="label-button">Descagar factura</label>
             </div>
         </div>
         <div class="container2">
